force-app/main/default/objects/Education_Detail__c/Education_Detail__c.object-meta.xml
<CustomObject>
    <label>Education Detail</label>
    <nameField>
        <displayFormat>EDN-{00000}</displayFormat>
        <label>Education Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>