force-app/main/default/objects/Education_Detail__c/fields/Course_Duration__c.field-meta.xml
<CustomField>
    <fullName>Course_Duration__c</fullName>
    <label>Course Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>