force-app/main/default/objects/Education_Detail__c/fields/Education_Degree__c.field-meta.xml
<CustomField>
    <fullName>Education_Degree__c</fullName>
    <label>Education - Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>