force-app/main/default/objects/Education_Detail__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Education Details</relationshipLabel>
    <relationshipName>Education_Details</relationshipName>
    <type>Lookup</type>
</CustomField>